--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "ConnectionStrings": {
+    "TransferDb": "Data Source=31.31.196.202;Initial Catalog=u0283737_trs;Integrated Security=False;User Id=u0283737_trs;Password=7bcB8$1y;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "appSettings": {
+    "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8"
   },
   "AllowedHosts": "*"
 }
