--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -1,23 +1,35 @@
 {
   "version": "1.0.0",
-  "name": "asp.net",
+  "name": "transfer.web",
   "private": true,
+  "scripts": {
+    "start": "webpack --config webpack.config.js --watch --progress --profile",
+    "build": "webpack --mode development --config webpack.config.js --progress",
+    "prod": "webpack --mode production --config webpack.config.js --progress"
+  },
   "dependencies": {
-    "jquery": "3.6.0",
-    "jquery-validation": "1.19.3",
-    "jquery-validation-unobtrusive": "3.2.12",
-    "jquery-ajax-unobtrusive": "3.2.6",
+    "@fortawesome/fontawesome-free": "5.15.4",
     "bootstrap": "5.1.3",
     "bootstrap-datetime-picker": "2.4.4",
-    "moment": "2.29.1",
-    "@fortawesome/fontawesome-free": "5.15.4"
+    "jquery": "3.6.0",
+    "jquery-ajax-unobtrusive": "3.2.6",
+    "jquery-validation": "1.19.3",
+    "jquery-validation-unobtrusive": "3.2.12",
+    "moment": "2.29.1"
   },
   "devDependencies": {
-    "grunt": "1.4.1",
-    "grunt-contrib-clean": "2.0.0",
-    "grunt-contrib-jshint": "3.1.1",
-    "grunt-contrib-concat": "2.0.0",
-    "grunt-contrib-uglify": "5.0.1",
-    "grunt-contrib-watch": "1.1.0"
+    "@types/jquery": "^3.5.11",
+    "@babel/preset-env": "7.16.7",
+    "babel-loader": "8.2.3",
+    "glob": "7.2.0",
+    "clean-webpack-plugin": "4.0.0",
+
+    "style-loader": "3.3.1",
+    "css-loader": "6.5.1",
+    "mini-css-extract-plugin": "2.4.6",
+    "terser-webpack-plugin": "5.3.0",
+    "url-loader": "4.1.1",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
   }
 }
