--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -24,6 +24,7 @@
     "glob": "7.2.0",
     "clean-webpack-plugin": "4.0.0",
 
+    "file-loader": "6.2.0",
     "style-loader": "3.3.1",
     "css-loader": "6.5.1",
     "mini-css-extract-plugin": "2.4.6",
