--- a/Transfer.Common/Transfer.Common.csproj
+++ b/Transfer.Common/Transfer.Common.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<NoWarn>$(NoWarn);NU1701;CS8618;CS8604;CS8625;</NoWarn>
+		<NoWarn>$(NoWarn);CS8618;CS8604;CS8625;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,8 +16,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
-		<PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
 		<PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
 	</ItemGroup>
