--- a/Transfer.Dal/Transfer.Dal.csproj
+++ b/Transfer.Dal/Transfer.Dal.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<NoWarn>$(NoWarn);NU1701</NoWarn>
+		<NoWarn>$(NoWarn);CS8618;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
