--- a/Transfer.Common/Transfer.Common.csproj
+++ b/Transfer.Common/Transfer.Common.csproj
@@ -16,12 +16,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Security\" />
 		<Folder Include="Users\" />
 	</ItemGroup>
 
