--- a/Transfer.Bl/Transfer.Bl.csproj
+++ b/Transfer.Bl/Transfer.Bl.csproj
@@ -16,4 +16,8 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Transfer.Dal\Transfer.Dal.csproj" />
+	</ItemGroup>
+
 </Project>
