--- a/Transfer.Web/Transfer.Web.csproj
+++ b/Transfer.Web/Transfer.Web.csproj
@@ -36,6 +36,7 @@
 	<ItemGroup>
 		<Folder Include="Scripts\TripRequest\" />
 		<Folder Include="wwwroot\dist\" />
+		<Folder Include="wwwroot\Files\" />
 	</ItemGroup>
 
 	<ItemGroup>
