--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -10,7 +10,8 @@
     }
   },
   "appSettings": {
-    "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8"
+    "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8",
+    "FileStoragePath": "../../../TransferFiles"
   },
   "AllowedHosts": "*"
 }
