--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -11,7 +11,7 @@
   },
   "appSettings": {
     "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8",
-    "FileStoragePath": "../../../TransferFiles"
+    "FileStoragePath": "../../TransferFiles"
   },
   "AllowedHosts": "*"
 }
