--- a/Transfer.Web/tsconfig.json
+++ b/Transfer.Web/tsconfig.json
@@ -11,6 +11,5 @@
   "include": [
     "scripts"
   ],
-  "files": ["empty.ts"],
-  "exclude": [ "node_modules", "**/*.spec.ts" ]
+  "files": ["empty.ts"]
 }
