--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.11",
-    "@types/bootstrap-fileinput": "5.0.3"
+    "@types/bootstrap-fileinput": "5.0.3",
+    "@types/jquery-mask-plugin": "1.14.4"
   }
 }
