--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -11,6 +11,7 @@
   },
   "appSettings": {
     "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8",
+    "TGBotHost": "https://2541-178-140-9-176.eu.ngrok.io",
     "FileStoragePath": "../../TransferFiles"
   },
   "AllowedHosts": "*"
