--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -10,8 +10,8 @@
     }
   },
   "appSettings": {
-    "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8",
-    "TGBotHost": "https://2541-178-140-9-176.eu.ngrok.io",
+    "TGBotToken": "5262141973:AAF6Me0_5oyN91qnSyjjJl9f7CO19-kHvQY",
+    "TGBotHost": "https://8b29-178-140-9-176.eu.ngrok.io",
     "FileStoragePath": "../../TransferFiles"
   },
   "AllowedHosts": "*"
