--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -9,6 +9,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  //ngrok http http://localhost:25167/ -region eu -host-header="localhost:25167"
   "appSettings": {
     "TGBotToken": "5262141973:AAF6Me0_5oyN91qnSyjjJl9f7CO19-kHvQY",
     "TGBotHost": "https://8b29-178-140-9-176.eu.ngrok.io",
