--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -8,6 +8,5 @@
     "@types/jquery-mask-plugin": "1.14.4",
     "@types/select2": "4.0.55"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
