--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -15,5 +15,12 @@
     "TGBotHost": "https://8b5b-178-140-9-176.eu.ngrok.io",
     "FileStoragePath": "../../TransferFiles"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "support@nexttripto.ru",
+    "DisplayName": "Служба роддержки nexttripto.ru",
+    "Password": "s^9Sel77",
+    "Host": "mail.hosting.reg.ru",
+    "Port": 465
+  }
 }
