--- a/Transfer.Web/Transfer.Web.csproj
+++ b/Transfer.Web/Transfer.Web.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dadata" Version="21.12.0" />
+		<PackageReference Include="MailKit" Version="3.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
