--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -18,7 +18,7 @@
   "AllowedHosts": "*",
   "MailSettings": {
     "Mail": "support@nexttripto.ru",
-    "DisplayName": "Служба роддержки nexttripto.ru",
+    "DisplayName": "пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ nexttripto.ru",
     "Password": "s^9Sel77",
     "Host": "mail.hosting.reg.ru",
     "Port": 465
