--- a/Transfer.Web/Transfer.Web.csproj
+++ b/Transfer.Web/Transfer.Web.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dadata" Version="21.12.0" />
+		<PackageReference Include="EPPlus" Version="6.1.0" />
 		<PackageReference Include="MailKit" Version="3.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.3" />
@@ -46,7 +47,6 @@
 
 	<ItemGroup>
 		<Folder Include="wwwroot\dist\" />
-		<Folder Include="wwwroot\js\" />
 	</ItemGroup>
 
 	<ItemGroup>
