--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jquery": "^3.5.11",
+    "@types/bootstrap": "5.1.13",
     "@types/bootstrap-fileinput": "5.0.3",
     "@types/jquery-mask-plugin": "1.14.4",
     "@types/select2": "4.0.55"
