--- a/Transfer.Web/package.json
+++ b/Transfer.Web/package.json
@@ -3,12 +3,11 @@
   "name": "transfer.web",
   "private": true,
   "dependencies": {
+    "@types/jquery": "^3.5.11",
     "@types/bootstrap": "5.1.13",
     "@types/bootstrap-fileinput": "5.0.3",
     "@types/jquery-mask-plugin": "1.14.4",
     "@types/select2": "4.0.55"
   },
-  "devDependencies": {
-    "@types/jquery": "^3.5.16"
-  }
+  "devDependencies": {}
 }
