--- a/Transfer.Console/Transfer.Console.csproj
+++ b/Transfer.Console/Transfer.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>latestMajor</LangVersion>
   </PropertyGroup>
 
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Transfer.Bl\Transfer.Bl.csproj" />
+    <ProjectReference Include="..\Transfer.Bot\Transfer.Bot.csproj" />
     <ProjectReference Include="..\Transfer.Common\Transfer.Common.csproj" />
     <ProjectReference Include="..\Transfer.Dal\Transfer.Dal.csproj" />
   </ItemGroup>
