--- a/Transfer.Web/Transfer.Web.csproj
+++ b/Transfer.Web/Transfer.Web.csproj
@@ -17,9 +17,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Dadata" Version="21.12.0" />
-		<PackageReference Include="EPPlus" Version="6.1.0" />
+		<PackageReference Include="EPPlus" Version="6.2.16" />
+		<PackageReference Include="jQuery" Version="3.7.1" />
+		<PackageReference Include="jQuery.Validation" Version="1.19.5" />
 		<PackageReference Include="MailKit" Version="3.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.26" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.26" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
@@ -35,6 +38,7 @@
 		<PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+		<PackageReference Include="System.Security.Cryptography.Pkcs" Version="6.0.4" />
 		<PackageReference Include="X.PagedList.Mvc.Core" Version="8.1.0" />
 	</ItemGroup>
 
