--- a/Transfer.Web/appsettings.json
+++ b/Transfer.Web/appsettings.json
@@ -14,7 +14,10 @@
   "appSettings": {
     "TGBotToken": "2095347159:AAGVQt7kPKOYi1xFZHT1HZKzQBk_Jxrzdz8",
     "TGBotHost": "https://8b5b-178-140-9-176.eu.ngrok.io",
-    "FileStoragePath": "../../TransferFiles"
+    "FileStoragePath": "../../TransferFiles",
+    "PlusofonBaseApiUrl": "https://restapi.plusofon.ru",
+    "PlusofonToken": "c2198uexqQeKIdExWJ8XMmEDanqUqaN13wsj",
+    "PlusofonClientId": "1974"
   },
   "AllowedHosts": "*",
   "MailSettings": {
